--- a/09-CSS-Positioning/homework/homework.css
+++ b/09-CSS-Positioning/homework/homework.css
@@ -7,32 +7,70 @@ archivo en cualquiera de estas carpetas, estás en el lugar equivocado.
 
 /* Arrancaremos este ejercicio por vos: */
 #ejercicioUno {
+    display: block;
+    text-align: center;
 
 }
 
 
 /* Ejercicio 2: Posicionar el header */
 
-/* Acá va tu código */
+#ejerciciodos {
+    display: none;
+}
+
 
 
 
 /* Ejercicio 3: */
 
-/* Acá va tu código */
+#ejerciciotres {
+    position: relative;
+    position: absolute;
+    top: 100px;
+    left: 200px;
+
+
+}
+
+    
 
 
 
 /* Ejercicio 4: */
 
-/* Acá va tu código */
+#ejercicioCuatro {
+    position: fixed;
+    top: 0px;
+    left: 0px;
+
+}
 
 
 
 /* Ejercicio 5: */
 
 /* Acá va tu código */
+#ejercicioCinco {
+    display: flex;     
+    justify-content: space-around;
+    align-items: center;
+    
 
+}
 
 
 /* Ejercicio 6. */
+
+#ejercicioCinco {
+    display: flex;     
+    flex-direction: row-reverse;
+
+}
+
+
+#elementouno {
+    display: flex;
+    justify-content: space-between;
+
+}
